--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,10 @@
+0.1 2020-04-04 Paris
+--------------------
+
+- Add persistent connections
+- Use ocamlformat
+- Interface changes
+
 0.1 2020-02-04 Paris
 --------------------
 
