--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,9 @@
-0.1 2020-04-04 Paris
+0.2.1 2020-06-25 Paris
+----------------------
+
+- Fix for async.v0.14.0
+
+0.2 2020-04-04 Paris
 --------------------
 
 - Add persistent connections
