--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+0.3.0 2020-11-20 Paris
+----------------------
+
+- Interface change
+- Use ocamlformat
+
 0.2.1 2020-06-25 Paris
 ----------------------
 
